# praxis

./: .gitignore  README.md  backend.course
.github/workflows/: release.yml
builds/: Praxis_0.1.0-alpha_aarch64.dmg
course-backend-fastapi/: course.json
course-backend-fastapi/chapters/: 01-health-check.md  02-movie-list.md  03-adding-movie.md  04-path-parameters.md  05-updating-resource.md
course-backend-fastapi/tests/: 01-health-check.json  02-movie-list.json  03-adding-movie.json  04-path-parameters.json  05-updating-resource.json
public/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: course_loader.rs  db_assertions.rs  environment.rs  error.rs  lib.rs  main.rs  server.rs  test_runner.rs
